--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@remobile/react-native-refresh-infinite-listview": "^1.0.6",
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-dropdown-menu": "^1.1.0",
-    "react-native-pull": "^2.0.2",
     "react-native-tab-navigator": "^0.3.3"
   },
   "devDependencies": {
