--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-dropdown-menu": "^1.1.0",
-    "react-native-tab-navigator": "^0.3.3"
+    "react-native-smart-pull-to-refresh-listview": "^1.6.10",
+    "react-native-smart-timer-enhance": "^1.0.3",
+    "react-native-tab-navigator": "^0.3.3",
+    "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
