--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@remobile/react-native-refresh-infinite-listview": "^1.0.6",
-    "react": "15.4.2",
-    "react-native": "0.40.0",
+    "react": "^16.0.0-alpha.6",
+    "react-native": "^0.44.0",
+    "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-dropdown-menu": "^1.1.0",
     "react-native-smart-pull-to-refresh-listview": "^1.6.10",
     "react-native-smart-timer-enhance": "^1.0.3",
     "react-native-tab-navigator": "^0.3.3",
+    "react-navigation": "^1.0.0-beta.11",
     "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
